Fixed images causing viewport to be too wide

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,6 +25,10 @@ h6 {
 	font-display: block;
 }
 
+img {
+	max-width: 100%;
+}
+
 .navbar-dark .navbar-nav .nav-link {
 	color: white;
 }
